# sre-platform

./: .gitignore  LICENSE  README.md
.github/: RELEASE_NOTES_v0.1.0.md
.github/workflows/: ci.yml
project-01-sre-platform/: README.md
project-01-sre-platform/docs/: WALKTHROUGH.md
project-01-sre-platform/k8s/: namespace.yaml
project-01-sre-platform/observability/: otel-cluster-values.yaml  otel-daemon-values.yaml
project-01-sre-platform/platform-api/: Dockerfile  README.md  pyproject.toml
project-01-sre-platform/platform-api/src/: config.py  main.py  telemetry.py
project-01-sre-platform/platform-api/src/k8s/: client.py  events.py  nodes.py  workloads.py
project-01-sre-platform/platform-api/src/llm/: backend.py  claude_backend.py  gemini_backend.py  ollama_backend.py
project-01-sre-platform/platform-api/src/receipts/: emitter.py  signer.py
project-01-sre-platform/platform-api/src/routes/: audit.py  explain.py  health.py  metrics.py  nodes.py  state.py  workloads.py
project-01-sre-platform/platform-api/src/slo/: model.py  store.py
project-01-sre-platform/platform-api/src/vault/: client.py
project-01-sre-platform/platform-api/tests/: test_receipts.py  test_slo_math.py  test_slo_store.py
project-01-sre-platform/scripts/: build-and-load.sh  cluster-down.sh  cluster-up.sh  demo-keda-trigger.sh  load.sh  scale-cluster-down.sh  scale-cluster-up.sh  verify-image.sh  verify-receipt
project-02-ai-sre-agent/: README.md
project-03-paved-road/: README.md
project-04-sentinel/: README.md
shared/: capabilities.md  glossary.md  talking-points.md
(+35 files in other folders)
